--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(CppQueue)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(CppQueue main.cpp)
+add_executable(CppQueue main.cpp queues.cpp queues.h)
